# own_your_saves

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  ReadMe.md
backend/: Cargo.toml
backend/src/: api.rs  database.rs  file_processing.rs  main.rs
backend/src/api/: repo.rs  task.rs  transfer.rs  user.rs
backend/src/file_processing/: io.rs  reconstruction.rs  repository.rs  repository_file.rs  storage.rs
backend/src/file_processing/storage/: commit_generation.rs
common/: Cargo.toml
common/src/: data.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml
planning/: compression-doc.txt
src/: file_processing.rs  main.rs
src/file_processing/: io.rs  reconstruction.rs  u232.rs
