[package]
name = "own_your_saves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "^0.10"
actix-web = "^4.3"
actix-web-lab = { version = "^0.19", features = ["spa"] }
uuid = { version = "^1.3", features = ["v4","serde"]}
serde = { version = "^1", features = ["derive"]}
log = "^0.4"
env_logger = "0.10"
strum = { version = "^0.24", features = ["derive"] }
strum_macros = "^0.24"
common = { path = "../common" }
rusqlite = { version = "0.28.0", features = ["bundled","chrono","uuid"] }
chrono = { version = "^0.4" }